--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,6 @@ dependencies = [
     "openpyxl>=3.1.5",
     "pydantic>=2.11.7",
     "python-docx>=1.2.0",
+    "torch>=2.7.1",
+    "transformers>=4.52.4",
 ]
